# idu-acousstic-analysis

./: README.org  pyproject.toml
data/: phone_map
scripts/: convert_filenames_to_ipa.py  convert_idu_to_ipa.py  convert_roman_to_idu.py  create_pronunciation_dict.py  create_word_boundaries_praat.py  replace.py
tests/: test_idu_acoustic_analysis.py
