[tool.poetry]
name = "idu-acoustic-analysis"
version = "0.1.0"
description = ""
authors = ["akki2825"]

[tool.poetry.dependencies]
python = "^3.8"
tgt="1.5"
docopt="0.6.2"
black="24.2.0"
numpy="1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
